# Intellect-Hire-App

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: pylint.yml  testing_release.yml
layout/: ask_resume.py  job_matcher.py  profile.py
utils/: common.py  layout.py  prompt_structure.py
