[project]
name = "intellect-hire-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-generativeai>=0.8.5",
    "langchain==0.1.1",
    "langchain-community==0.0.13",
    "pandas>=2.3.1",
    "pypdf>=6.0.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.48.1",
]
